--- a/LZF.asmdef
+++ b/LZF.asmdef
@@ -1,3 +1,8 @@
-﻿{
-	"name": "LZF"
+{
+    "name": "LZF",
+    "references": [
+        "HouraiCore"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": []
 }
