--- a/LZF.asmdef
+++ b/LZF.asmdef
@@ -3,6 +3,8 @@
     "references": [
         "HouraiCore"
     ],
+    "optionalUnityReferences": [],
     "includePlatforms": [],
-    "excludePlatforms": []
+    "excludePlatforms": [],
+    "allowUnsafeCode": true
 }
