--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "name": "com.houraiteahouse.lz4",
   "displayName": "LZ4 Binary Compression",
   "version": "0.0.1",
-  "description": "LZ4 Binary Compression library"
+  "description": "LZ4 Binary Compression library",
+  "dependencies": {
+    "com.houraiteahouse.core": "file:HouraiCOre"
+  }
 }
