--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "author": "Hourai Teahouse",
   "name": "com.houraiteahouse.lz4",
   "displayName": "LZ4 Binary Compression",
-  "version": "0.0.1",
+  "version": "2.0.0",
   "description": "LZ4 Binary Compression library",
+  "homepage": "https://github.com/HouraiTeahouse/LZF",
+  "bugs": "https://github.com/HouraiTeahouse/LZF/issues",
+  "repository": "github:HouraiTeahouse/LZF",
   "dependencies": {
-    "com.houraiteahouse.core": "file:HouraiCOre"
+    "com.houraiteahouse.core": "1.0.0"
+  }
+  "publishConfig": {
+    "registry": "https://upm.houraiteahouse.net"
   }
 }
